--- a/app/views/bug.html
+++ b/app/views/bug.html
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group">
       <label for="reproduceSteps">Steps to reproduce:</label>
-      <textarea ng-model="additionalInfo" class="form-control" id="reproduceSteps" rows="3"></textarea>
+      <textarea ng-model="reproduceSteps" class="form-control" id="reproduceSteps" rows="3"></textarea>
     </div>
     <button type="submit" ng-click="send()" class="btn btn-primary">Send</button>
     <button type="submit" ng-click="cancel()" class="btn btn-default">Cancel</button>
