--- a/app/views/access.html
+++ b/app/views/access.html
@@ -1,4 +1,4 @@
-<form ng-controller="UpgradeRequestController">
+<form ng-controller="AccessRequestController">
   <div class="form-group">
     <label for="resourceAdress">Resource address:</label>
     <input ng-model="resourceAdress" type="text" class="form-control" id="resourceAdress" placeholder="E.g: https://jira.atlassian.com/">
