--- a/app/views/upgrade.html
+++ b/app/views/upgrade.html
@@ -1,23 +1,23 @@
 <form ng-controller="UpgradeRequestController">
   <div class="form-group">
     <label for="equipment">Equipment you want:</label>
-    <input ng-model="equipment" type="text" class="form-control" id="equipment" placeholder="E.g.: RAM 4gb, HDD 500gb">
+    <input ng-model="upgradeRequest.equipment" type="text" class="form-control" id="equipment" placeholder="E.g.: RAM 4gb, HDD 500gb">
   </div>
   <div class="form-group">
     <label for="reason">Reason to replace:</label><br>
-    <select class="form-control" ng-model="selectedReason" ng-options="reason for reason in reasonsToReplace" id="reason">
+    <select class="form-control" ng-model="upgradeRequest.selectedReason" ng-options="reason for reason in upgradeRequest.reasonsToReplace" id="reason">
         <option value="">Not selected</option>
     </select>
   </div>
   <div class="form-group">
     <label for="">Criticality:</label>
-    <select class="form-control" ng-model="selectedCriticality" ng-options="criticality for criticality in criticalities" id="criticality">
+    <select class="form-control" ng-model="upgradeRequest.selectedCriticality" ng-options="criticality for criticality in upgradeRequest.criticalities" id="criticality">
         <option value="">Not selected</option>
     </select>
   </div>
   <div class="form-group">
       <label for="additional">Additional information:</label>
-    <textarea ng-model="additionalInfo" class="form-control" id="additional" rows="3"></textarea>
+    <textarea ng-model="upgradeRequest.additionalInfo" class="form-control" id="additional" rows="3"></textarea>
   </div>
   <button type="submit" ng-click="send()" class="btn btn-primary">Send</button>
   <button type="submit" ng-click="cancel()" class="btn btn-default">Cancel</button>
