add upgrade-form directive

--- a/app/views/upgrade.html
+++ b/app/views/upgrade.html
@@ -1,3 +1,4 @@
+<div class="request-form">
 <form ng-controller="UpgradeRequestController">
   <div class="form-group">
     <label for="equipment">Equipment you want:</label>
@@ -22,3 +23,4 @@
   <button type="submit" ng-click="send()" class="btn btn-primary">Send</button>
   <button type="submit" ng-click="cancel()" class="btn btn-default">Cancel</button>
 </form>
+</div>
