--- a/app/views/access.html
+++ b/app/views/access.html
@@ -1,3 +1,4 @@
+<div class="request-form">
 <form ng-controller="AccessRequestController">
   <div class="form-group">
     <label for="resourceAdress">Resource address:</label>
@@ -21,3 +22,4 @@
   <button type="submit" ng-click="send()" class="btn btn-primary">Send</button>
   <button type="submit" ng-click="cancel()" class="btn btn-default">Cancel</button>
 </form>
+</div>
