add bug-form directive

--- a/app/views/bug.html
+++ b/app/views/bug.html
@@ -1,3 +1,4 @@
+<div class="request-form">
 <form ng-controller="BugRequestController">
     <div class="form-group">
       <label for="problem">I have a problem with:</label><br>
@@ -16,3 +17,4 @@
     <button type="submit" ng-click="send()" class="btn btn-primary">Send</button>
     <button type="submit" ng-click="cancel()" class="btn btn-default">Cancel</button>
 </form>
+</div>
